# rag-facile

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  ruff.toml
.grit/patterns/: app.grit  markdown.grit  pyproject.grit
.moon/: toolchain.yml  workspace.yml
apps/admin/: pyproject.toml
apps/admin/src/admin/: __init__.py
apps/chainlit-chat/: Justfile  app.py  pyproject.toml
apps/chat/: pyproject.toml
apps/chat/src/chat/: __init__.py
apps/cli/: README.md  pyproject.toml
apps/cli/src/cli/: main.py
apps/cli/src/cli/commands/: gen_template.py  init.py
apps/cli/src/cli/configs/: chainlit_copier.yml  reflex_copier.yml
apps/ingestion/: pyproject.toml
apps/ingestion/src/ingestion/: __init__.py
apps/reflex-chat/: .env.example  .gitignore  Justfile  README.md  pyproject.toml  rxconfig.py
apps/reflex-chat/reflex_chat/: state.py
apps/reflex-chat/reflex_chat/components/: chat.py
scripts/: generate_template.sh
templates/chainlit-chat/: README.md  README.md.jinja  app.py  copier.yml  pyproject.toml.jinja
templates/reflex-chat/: README.md.jinja  copier.yml  pyproject.toml.jinja  rxconfig.py.jinja
templates/reflex-chat/.web/: reflex.json
templates/reflex-chat/.web/app/: root.jsx
templates/reflex-chat/.web/app/routes/: _index.jsx
templates/reflex-chat/{{ project_name|replace('-', '_') }}/: state.py  {{ project_name|replace('-', '_') }}.py.jinja
templates/reflex-chat/{{ project_name|replace('-', '_') }}/components/: chat.py  chat.py.jinja  navbar.py.jinja
