[project]
name = "chainlit-chat"
version = "0.1.0"
description = "Chainlit Chat with OpenAI Functions Streaming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=5.0.0",
]

[project.scripts]
chainlit-chat = "chainlit.cli:run"
